add materialize and partial update design

--- a/templates/Public/contact.html.twig
+++ b/templates/Public/contact.html.twig
@@ -1,6 +1,9 @@
-{# templates/public/home.html.twig #}{% extends 'base.html.twig' %}{% block
-title %}<h1>Contact Web CV</h1>{% endblock %} {% block body %}
+{% extends 'base.html.twig' %}
+{% block title %}<h1>Contact Web CV</h1>{% endblock %} {% block body %}
 
-<h1>Contact Web CV</h1>
-<p>{{ number }}</p>
+<div class="container">
+		<div class="row center-align">
+			<h1>Contact Web CV</h1>
+		</div>
+	</div>
 {% endblock %}
