--- a/templates/cv/_form.html.twig
+++ b/templates/cv/_form.html.twig
@@ -3,5 +3,5 @@
 {{ form_start(form) }}
     {#{ form_widget(form) }#}
     {{ form_row(form.name) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button  class="btn btn-large waves-effect waves-light">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
