--- a/templates/Public/about.html.twig
+++ b/templates/Public/about.html.twig
@@ -1,6 +1,8 @@
-{# templates/public/home.html.twig #}{% extends 'base.html.twig' %}{% block
-title %}<h1>A propos Web CV</h1>{% endblock %} {% block body %}
-
-<h1>A propos Web CV</h1>
-<p>{{ number }}</p>
+{% extends 'base.html.twig' %}
+{% block title %}<h1>A propos Web CV</h1>{% endblock %} {% block body %}
+<div class="container">
+		<div class="row center-align">
+			<h1>A propos Web CV</h1>
+		</div>
+	</div>
 {% endblock %}
