--- a/templates/Public/home.html.twig
+++ b/templates/Public/home.html.twig
@@ -1,7 +1,10 @@
-{# templates/public/home.html.twig #}{% extends 'base.html.twig' %}{% block
-title %}<h1>Accueil Web CV</h1>{% endblock %} {% block body %}
+{% extends 'base.html.twig' %}
+{% block title %}<h1>Accueil Web CV</h1>{% endblock %} {% block body %}
+	<div class="container">
+		<div class="row center-align">
+			<h1>Accueil Web CV</h1>
+		</div>
+	</div>
 
-<h1>Accueil Web CV</h1>
-<p>{{ number }}</p>
 
 {% endblock %}
