--- a/templates/cv/index.html.twig
+++ b/templates/cv/index.html.twig
@@ -4,35 +4,40 @@
 
 {% block body %}
 <div class="container">
-    <div class="row text-center">
+    <div class="row center-align">
             <h1>Mes CV</h1>
             <p>retrouver tous mes CV </p>
     </div> 
 </div>
-<div class="container text-center">
+<div class="container ">
     <div class="row">
        {% for cv in cvs %}
-        <div class="col-4">
-            <div class="card col-sm" style="width: 18rem;height: 15rem;padding-bottom:4rem;margin-bottom:4rem;">
-                <div class="card-body">
-                    <p class="card-text">{{ cv.name }}</p>
+        <div class="col s12 m4 l4">
+            <a href="{{ path('cv_show', {'id': cv.id}) }}">
+            <div class="card hoverable" style="border-radius: 20px">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{{ asset('build/portfolio.png') }}">
                 </div>
-                <a href="{{ path('cv_show', {'id': cv.id}) }}"><i class="fas fa-7x fa-file-alt"></i></a>
-                
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">{{ cv.name }} <i class="green-text small right material-icons">visibility</i></span>
+                </div>    
             </div>
-        </div>
-        
-                
+            </a>
+        </div>  
         {% else %}
                 
         {% endfor %}
-        <div class="col-4">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h2 class="card-text">Nouveau CV</h2>
-                    <a href="{{ path('cv_new') }}"><i class="fas fa-7x fa-file-alt"></i> </a>
+        <div class="col s12 m4 l4">
+            <a href="{{ path('cv_new') }}">
+            <div class="card hoverable" style="border-radius: 20px">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <img class="activator" src="{{ asset('build/portfolio.png') }}">
                 </div>
+                <div class="card-content">
+                    <span class="card-title activator grey-text text-darken-4">Créer un nouveau CV <i class="green-text small right material-icons">add_circle</i></span>
+                </div> 
             </div>
+            </a>
         </div>
     </div>
 </div>
