--- a/templates/infos_perso/_form.html.twig
+++ b/templates/infos_perso/_form.html.twig
@@ -3,5 +3,5 @@
     {{ form_row(form.firstname) }}
     {{ form_row(form.name) }}
     {{ form_row(form.jobtitle) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button  class="btn btn-large waves-effect waves-light">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
