--- a/templates/infos_perso/edit.html.twig
+++ b/templates/infos_perso/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Edit InfosPerso{% endblock %}
 
 {% block body %}
-    <h1>Edit InfosPerso</h1>
+	<div class="container">
+    	<div class="row">
+      		<div class="card br20 blue-grey lighten-5 center-align">
+			    <h1>Edit InfosPerso</h1>
 
-    {{ include('infos_perso/_form.html.twig', {'button_label': 'Update'}) }}
+			    {{ include('infos_perso/_form.html.twig', {'button_label': 'Update'}) }}
 
-     <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
+			     <a class="btn btn-large waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
 
-    {{ include('infos_perso/_delete_form.html.twig') }}
+			    {{ include('infos_perso/_delete_form.html.twig') }}
+			</div>
+		</div>
+	</div>
 {% endblock %}
