--- a/templates/langue/edit.html.twig
+++ b/templates/langue/edit.html.twig
@@ -3,15 +3,16 @@
 {% block title %}Edit Langue{% endblock %}
 
 {% block body %}
-    <h1>Edit Langue</h1>
+	<div class="container">
+    	<div class="row">
+      		<div class="card br20 blue-grey lighten-5 center-align">
+			    <h1>Edit Langue</h1>
 
-    {{ include('langue/_form.html.twig', {'button_label': 'Update'}) }}
+			    {{ include('langue/_form.html.twig', {'button_label': 'Update'}) }}
 
-     <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
-    
-    {{ include('langue/_delete_form.html.twig') }}
-}
-}
-}
-}
+			    <a class="btn btn-large waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+			    {{ include('langue/_delete_form.html.twig') }}
+			</div>
+		</div>
+	</div>
 {% endblock %}
