--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -5,28 +5,24 @@
 {% block body %}
 <div class="container">
     <div class="row">
-    	<div class="col-md-10 ml-md-auto">
-        	<div class="text-center">
-            	<div class="card bg-light mb-3 mt-5" style="width: 800px;">
-                	<div class="card-body">
+      <div class="card br20 blue-grey lighten-5 center-align">
     					<h1>Reset your password</h1>
 
 				    	{{ form_start(resetForm) }}
-						<div class="form-group">
-                        	<div class="col-md-12">
+						<div class="row">
+              				<div class="input-field col s6 offset-s3">
 					   			{{ form_row(resetForm.plainPassword) }}
 					    	</div>
 						</div>
-				    	<div class="form-group">
-				        	<div class="col-md-12">
-				        		<button class="btn btn-primary">Reset password</button>
+					    	<div class="form-group">
+					        	<div class="col-md-12">
+				        		<button class="btn btn-large waves-effect waves-light">
+                      <i class="material-icons right">assignment_turned_in</i>Reset password</button>
 				      		</div>
 				    	</div>
 				    	{{ form_end(resetForm) }}
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
 </div>
 {% endblock %}
