--- a/templates/skills/new.html.twig
+++ b/templates/skills/new.html.twig
@@ -3,9 +3,15 @@
 {% block title %}New Skills{% endblock %}
 
 {% block body %}
-    <h1>Create new Skills</h1>
+	<div class="container">
+    	<div class="row">
+      		<div class="card br20 blue-grey lighten-5 center-align">
+			    <h1>Create new Skills</h1>
 
-    {{ include('skills/_form.html.twig') }}
+			    {{ include('skills/_form.html.twig') }}
+			</div>
+		</div>
+	</div>
 
-    <a href="{{ path('skills_index') }}">back to list</a>
+	<a class="btn btn-large waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
 {% endblock %}
