--- a/templates/training/edit.html.twig
+++ b/templates/training/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Edit Training{% endblock %}
 
 {% block body %}
-    <h1>Edit Training</h1>
+	<div class="container">
+    	<div class="row">
+      		<div class="card br20 blue-grey lighten-5 center-align">
+			    <h1>Edit Training</h1>
 
-    {{ include('training/_form.html.twig', {'button_label': 'Update'}) }}
+			    {{ include('training/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
+			    <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
 
-    {{ include('training/_delete_form.html.twig') }}
+			    {{ include('training/_delete_form.html.twig') }}
+			</div>
+		</div>
+	</div>
 {% endblock %}
