--- a/templates/infos_perso/_form.html.twig
+++ b/templates/infos_perso/_form.html.twig
@@ -1,5 +1,6 @@
 {{ form_start(form) }}
     {#{ form_widget(form) }#}
+    {{ form_row(form.avatar) }}
     {{ form_row(form.firstname) }}
     {{ form_row(form.name) }}
     {{ form_row(form.jobtitle) }}
