--- a/templates/certificate/edit.html.twig
+++ b/templates/certificate/edit.html.twig
@@ -6,13 +6,16 @@
 	<div class="container">
     	<div class="row">
       		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Edit Certificate</h1>
-
-			    {{ include('certificate/_form.html.twig', {'button_label': 'Update'}) }}
-
-			    <a class="btn btn-large waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
-
-			    {{ include('certificate/_delete_form.html.twig') }}
+			    <h1>Modifier le certificat</h1>
+			    <div class="row">
+			    	{{ include('certificate/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+			    </div>
+				<div class="row left">
+			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+			 	</div>
+			 	<div class="row">
+			    	{{ include('certificate/_delete_form.html.twig') }}
+			    </div>
 			</div>
 		</div>
 	</div>
