--- a/templates/certificate/new.html.twig
+++ b/templates/certificate/new.html.twig
@@ -6,12 +6,14 @@
 	<div class="container">
     	<div class="row">
       		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Create new Certificate</h1>
+			    <h1>Ajouter un certificat</h1>
 
 			    {{ include('certificate/_form.html.twig') }}
+			    <div class="row left">
+			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+			 	</div>
 			</div>
 		</div>
 	</div>
 
-    <a class="btn btn-large waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
 {% endblock %}
