--- a/templates/contact_information/_delete_form.html.twig
+++ b/templates/contact_information/_delete_form.html.twig
@@ -1,5 +1,7 @@
 <form method="post" action="{{ path('contact_information_delete', {'id': contact_information.id, 'idcv': cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ contact_information.id) }}">
-    <button class="btn">Delete</button>
+    <div class="row right">
+    	<button class="red waves-effect waves-light btn">Delete</button>
+    </div>
 </form>
