--- a/templates/contact_information/_form.html.twig
+++ b/templates/contact_information/_form.html.twig
@@ -1,4 +1,23 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button  class="btn btn-large waves-effect waves-light">{{ button_label|default('Save') }}</button>
+    {#{ form_widget(form) }#}
+    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+    			{{ form_row(form.adresse)}}
+    		</div>
+    	</div>
+    	<div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{ form_row(form.numero) }}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{ form_row(form.email) }}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+    			<button  class="green btn btn-large waves-effect waves-light">{{ button_label|default('Sauvegarder') }}</button>
+    		</div>
+    	</div>
 {{ form_end(form) }}
