--- a/templates/cv/_form.html.twig
+++ b/templates/cv/_form.html.twig
@@ -2,6 +2,14 @@
 
 {{ form_start(form) }}
     {#{ form_widget(form) }#}
-    {{ form_row(form.name) }}
-    <button  class="btn btn-large waves-effect waves-light">{{ button_label|default('Save') }}</button>
+    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+    			{{ form_row(form.name) }}
+    		</div>
+    	</div>
+    	<div class="row">
+	        <div class="input-field col s8 offset-s2">
+    			<button  class="green btn btn-large waves-effect waves-light">{{ button_label|default('Sauvegarder') }}</button>
+    		</div>
+    	</div>
 {{ form_end(form) }}
