--- a/templates/infos_perso/_delete_form.html.twig
+++ b/templates/infos_perso/_delete_form.html.twig
@@ -1,5 +1,8 @@
 <form method="post" action="{{ path('infos_perso_delete', {'id': infos_perso.id, 'idcv': cv}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ infos_perso.id) }}">
-    <button class="btn">Delete</button>
+    <div class="row right">
+    	<button class="red waves-effect waves-light btn">Delete</button>
+    </div>
+    
 </form>
