--- a/templates/infos_perso/edit.html.twig
+++ b/templates/infos_perso/edit.html.twig
@@ -6,13 +6,17 @@
 	<div class="container">
     	<div class="row">
       		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Edit InfosPerso</h1>
-
-			    {{ include('infos_perso/_form.html.twig', {'button_label': 'Update'}) }}
-
-			     <a class="btn btn-large waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
-
-			    {{ include('infos_perso/_delete_form.html.twig') }}
+			    <h1>Modifier l'info personnelle</h1>
+			    <div class="row">
+ 					{{ include('infos_perso/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+			    </div>
+			   
+				<div class="row left">
+			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+			 	</div>
+			     <div class="row">
+			    	{{ include('infos_perso/_delete_form.html.twig') }}
+			     </div>
 			</div>
 		</div>
 	</div>
