--- a/templates/infos_perso/new.html.twig
+++ b/templates/infos_perso/new.html.twig
@@ -6,12 +6,15 @@
 	<div class="container">
     	<div class="row">
       		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Create new InfosPerso</h1>
+			    <h1>Ajouter une info personnelle</h1>
 
 			    {{ include('infos_perso/_form.html.twig') }}
+			    <div class="row left">
+			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+			 	</div>
 			</div>
 		</div>
 	</div>
 
-   <a class="btn btn-large waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+   
 {% endblock %}
