--- a/templates/professional_course/_form.html.twig
+++ b/templates/professional_course/_form.html.twig
@@ -1,4 +1,33 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    {#{ form_widget(form) }#}
+    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{ form_row(form.title)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{ form_row(form.city)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{ form_row(form.period)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{ form_row(form.skillsacquired)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{form_row(form.description)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+    			<button  class="green btn btn-large waves-effect waves-light">{{ button_label|default('Sauvegarder') }}</button>
+    		</div>
+    	</div>
 {{ form_end(form) }}
