--- a/templates/skills/edit.html.twig
+++ b/templates/skills/edit.html.twig
@@ -6,15 +6,19 @@
 	<div class="container">
     	<div class="row">
       		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Edit Skills</h1>
+			    <h1>Modifier une compétence</h1>
+			    <div class="row">
+			    	{{ include('skills/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+			    </div>
 
-			    {{ include('skills/_form.html.twig', {'button_label': 'Update'}) }}
-
-			    <a class="btn btn-large waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
-
-			    {{ include('skills/_delete_form.html.twig') }}
+			   <div class="row left">
+			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+			 	</div>
+			 	<div class="row">
+			    	{{ include('skills/_delete_form.html.twig') }}
+			    </div>
 			</div>
 		</div>
 	</div>
-	
+
 {% endblock %}
