--- a/templates/training/_form.html.twig
+++ b/templates/training/_form.html.twig
@@ -1,4 +1,28 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button  class="btn btn-large waves-effect waves-light">{{ button_label|default('Save') }}</button>
+    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{form_row(form.diplomatitle)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{form_row(form.school)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+	        	{{form_row(form.city)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field center-align col s8 offset-s2">
+	        	{{form_row(form.yearofgraduation)}}
+	        </div>
+	    </div>
+	    <div class="row">
+	        <div class="input-field col s8 offset-s2">
+    			<button  class="green btn btn-large waves-effect waves-light">{{ button_label|default('Sauvegarder') }}</button>
+    		</div>
+    	</div>
+    	
 {{ form_end(form) }}
