--- a/templates/training/edit.html.twig
+++ b/templates/training/edit.html.twig
@@ -6,13 +6,16 @@
 	<div class="container">
     	<div class="row">
       		<div class="card br20 blue-grey lighten-5 center-align">
-			    <h1>Edit Training</h1>
-
-			    {{ include('training/_form.html.twig', {'button_label': 'Update'}) }}
-
-			    <a href="{{ path('cv_show', {'id':cv}) }}">back to list</a>
-
-			    {{ include('training/_delete_form.html.twig') }}
+			    <h1>Modification de la formation</h1>
+			    <div class="row">
+			    	{{ include('training/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+			    </div>
+			    <div class="row left">
+			     	<a class="btn blue waves-effect waves-light" href="{{ path('cv_show', {'id':cv}) }}">Retour au Cv</a>
+			 	</div>
+				<div class="row">
+			    	{{ include('training/_delete_form.html.twig') }}
+			    </div>
 			</div>
 		</div>
 	</div>
